unpackaged/main/default/objects/EBH_ActiveTriggers__c/EBH_ActiveTriggers__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>[EBH] (EPH-5) Active trigger controller - to switch on/off and bypass for deployment or data migration</description>
    <label>Active Triggers</label>
</CustomObject>