unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/Action_Template__c.field-meta.xml
<CustomField>
    <fullName>Action_Template__c</fullName>
    <defaultValue>true</defaultValue>
    <description>US-0010583 - [PT ]Action.Detailed Description is not updated when Action Template.Detailed Description is manually updated</description>
    <label>Action_Template</label>
    <type>Checkbox</type>
</CustomField>