unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/CaseTrigger__c.field-meta.xml
<CustomField>
    <fullName>CaseTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Trigger</label>
    <type>Checkbox</type>
</CustomField>