unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/CopadoUserStory__c.field-meta.xml
<CustomField>
    <fullName>CopadoUserStory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CopadoUserStory</label>
    <type>Checkbox</type>
</CustomField>