unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/Coupon__c.field-meta.xml
<CustomField>
    <fullName>Coupon__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Coupon</label>
    <type>Checkbox</type>
</CustomField>