unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/Coupon_Category__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Category__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Coupon Category</label>
    <type>Checkbox</type>
</CustomField>