unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/Coupon_Co_Invest__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Co_Invest__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Coupon Co Invest</label>
    <type>Checkbox</type>
</CustomField>