unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/Coupon_Item__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Item__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Coupon Item</label>
    <type>Checkbox</type>
</CustomField>