unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/Coupon_Seller__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Seller__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Coupon Seller</label>
    <type>Checkbox</type>
</CustomField>