unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/Coupon_Seller_Send_T4_T40_to_seller__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Seller_Send_T4_T40_to_seller__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0007219 US-0007219 - Coupon &amp; Coupon Seller - attach T4 and T40 statement &amp; custom flag</description>
    <inlineHelpText>Allow trigger to send email to seller when stage reaches T4 or T40</inlineHelpText>
    <label>Coupon Seller: Send T4/T40 to seller</label>
    <type>Checkbox</type>
</CustomField>