unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/Coupon_Send_BCD_File_To_DL__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Send_BCD_File_To_DL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0007219 US-0007219 - Coupon &amp; Coupon Seller - attach T4 and T40 statement &amp; custom flag</description>
    <inlineHelpText>Allow trigger to send email to DL when stage reaches T4 or T40</inlineHelpText>
    <label>Coupon: Send BCD File To DL</label>
    <type>Checkbox</type>
</CustomField>