unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/Deal_Invoice_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Deal_Invoice_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0010453 - [UK-Deals] Deal Invoice - eBay billing address and VAT changes</description>
    <label>Deal Invoice Trigger</label>
    <type>Checkbox</type>
</CustomField>