unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/DealRetailCampaign_Trigger__c.field-meta.xml
<CustomField>
    <fullName>DealRetailCampaign_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Trigger switch for Deal Retail Campaign Trigger(s)</description>
    <inlineHelpText>Trigger switch for Deal Retail Campaign Trigger(s)</inlineHelpText>
    <label>Deal Retail Campaign Trigger</label>
    <type>Checkbox</type>
</CustomField>