unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/DealTrigger__c.field-meta.xml
<CustomField>
    <fullName>DealTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[EBH] Trigger switch for Deal Trigger(s)</description>
    <inlineHelpText>Trigger switch for Deal Trigger(s)</inlineHelpText>
    <label>Deal Trigger</label>
    <type>Checkbox</type>
</CustomField>