unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_AccountContactRelationTrigger__c.field-meta.xml
<CustomField>
    <fullName>EBH_AccountContactRelationTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[EBH] Trigger switch for AccountContactRelation Trigger(s)</description>
    <inlineHelpText>Trigger switch for AccountContactRelation Trigger(s)</inlineHelpText>
    <label>AccountContactRelation Trigger</label>
    <type>Checkbox</type>
</CustomField>