unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_AccountTrigger__c.field-meta.xml
<CustomField>
    <fullName>EBH_AccountTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[EBH] Trigger switch for Account Trigger(s)</description>
    <inlineHelpText>Trigger switch for Account Trigger(s)</inlineHelpText>
    <label>Account Trigger</label>
    <type>Checkbox</type>
</CustomField>