unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_AttachmentTrigger__c.field-meta.xml
<CustomField>
    <fullName>EBH_AttachmentTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] - To activate/deactivate Attachment Trigger</description>
    <inlineHelpText>To activate/deactivate Attachment Trigger</inlineHelpText>
    <label>Attachment Trigger</label>
    <type>Checkbox</type>
</CustomField>