unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_BUApprovalGroupTrigger__c.field-meta.xml
<CustomField>
    <fullName>EBH_BUApprovalGroupTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[EBH] (EPH-4032)</description>
    <label>BU Approval Group Trigger</label>
    <type>Checkbox</type>
</CustomField>