unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_CampaignApprovalGroupTrigger__c.field-meta.xml
<CustomField>
    <fullName>EBH_CampaignApprovalGroupTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[EBH] - to activate/deactivate Campaign Approval Group trigger</description>
    <inlineHelpText>Trigger switch for Campaign Approval Group Trigger</inlineHelpText>
    <label>Campaign Approval Group Trigger</label>
    <type>Checkbox</type>
</CustomField>