unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_CampaignKPITrigger__c.field-meta.xml
<CustomField>
    <fullName>EBH_CampaignKPITrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[EBH] Trigger switch for Campaign KPI Trigger(s)</description>
    <inlineHelpText>Trigger switch for Campaign KPI Trigger</inlineHelpText>
    <label>Campaign KPI Trigger</label>
    <type>Checkbox</type>
</CustomField>