unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_CampaignMemberTrigger__c.field-meta.xml
<CustomField>
    <fullName>EBH_CampaignMemberTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] Trigger switch for Campaign Member Trigger</description>
    <inlineHelpText>Trigger switch for Campaign Member</inlineHelpText>
    <label>CampaignMember Trigger</label>
    <type>Checkbox</type>
</CustomField>