unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_CampaignTrigger__c.field-meta.xml
<CustomField>
    <fullName>EBH_CampaignTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[EBH] (EPH-1772) - To copy the Campaign KPI records when the request is created/To enable or disable the campaign trigger</description>
    <inlineHelpText>Trigger switch for Campaign Trigger</inlineHelpText>
    <label>Campaign Trigger</label>
    <type>Checkbox</type>
</CustomField>