unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_ContactTrigger__c.field-meta.xml
<CustomField>
    <fullName>EBH_ContactTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[EBH] (EPH-3270) : Sprint 7: To enable/disable the Contact trigger.</description>
    <inlineHelpText>Trigger switch for Contact Trigger(s)</inlineHelpText>
    <label>Contact Trigger</label>
    <type>Checkbox</type>
</CustomField>