unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_ContentDocumentLinkTrigger__c.field-meta.xml
<CustomField>
    <fullName>EBH_ContentDocumentLinkTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[EBH] Trigger switch for Content Document Link  Trigger(s)</description>
    <inlineHelpText>Trigger switch for Content Document Link  Trigger(s)</inlineHelpText>
    <label>Content Document Link Trigger</label>
    <type>Checkbox</type>
</CustomField>