unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_ContentDocumentTrigger__c.field-meta.xml
<CustomField>
    <fullName>EBH_ContentDocumentTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] (EPH-5068)</description>
    <label>Content Document Trigger</label>
    <type>Checkbox</type>
</CustomField>