unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_ContractApprovalHierarchyTrigger__c.field-meta.xml
<CustomField>
    <fullName>EBH_ContractApprovalHierarchyTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[EBH] (EPH-51)</description>
    <label>Contract Approval Hierarchy</label>
    <type>Checkbox</type>
</CustomField>