unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_ContractApprovalMatrixTrigger__c.field-meta.xml
<CustomField>
    <fullName>EBH_ContractApprovalMatrixTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[EBH] (EPH-51)</description>
    <label>Contract Approval Matrix</label>
    <type>Checkbox</type>
</CustomField>