unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_ContractTrigger__c.field-meta.xml
<CustomField>
    <fullName>EBH_ContractTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[EBH] To activate/deactivate Contract Trigger</description>
    <inlineHelpText>Trigger switch for Contract Trigger</inlineHelpText>
    <label>Contract Trigger</label>
    <type>Checkbox</type>
</CustomField>