unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_CustomCampaignMemberTrigger__c.field-meta.xml
<CustomField>
    <fullName>EBH_CustomCampaignMemberTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] To enable/disable the custom campaign member</description>
    <inlineHelpText>To enable/disable the custom campaign member</inlineHelpText>
    <label>Custom Campaign Member</label>
    <type>Checkbox</type>
</CustomField>