unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_DocuSignStatusTrigger__c.field-meta.xml
<CustomField>
    <fullName>EBH_DocuSignStatusTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[EBH] Trigger switch for DocuSign Status Trigger(s)</description>
    <inlineHelpText>Trigger switch for DocuSign Status Trigger(s)</inlineHelpText>
    <label>DocuSign Status Trigger</label>
    <type>Checkbox</type>
</CustomField>