unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_EnableUrgencyEmail__c.field-meta.xml
<CustomField>
    <fullName>EBH_EnableUrgencyEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] (EPH-5459) - to enable and disable Urgency Task Email notifications</description>
    <label>Send Urgency Email Notifications</label>
    <type>Checkbox</type>
</CustomField>