unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_ExecuteContractUpdateBatch__c.field-meta.xml
<CustomField>
    <fullName>EBH_ExecuteContractUpdateBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] (EPH-51) - to track technically if contract update batch needs to be executed</description>
    <label>Execute Contract Update Batch</label>
    <type>Checkbox</type>
</CustomField>