unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_FeedItemTrigger__c.field-meta.xml
<CustomField>
    <fullName>EBH_FeedItemTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[EBH] Trigger switch for FeedItem Trigger(s)</description>
    <inlineHelpText>Trigger switch for FeedItemTrigger(s)</inlineHelpText>
    <label>Feed Item Trigger</label>
    <type>Checkbox</type>
</CustomField>