unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_KPIResultTrigger__c.field-meta.xml
<CustomField>
    <fullName>EBH_KPIResultTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[EBH] (EPH-1771) - to enable/disable the KPI result trigger</description>
    <inlineHelpText>Trigger switch for KPI Result Trigger</inlineHelpText>
    <label>KPI Result Trigger</label>
    <type>Checkbox</type>
</CustomField>