unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_PricingTrigger__c.field-meta.xml
<CustomField>
    <fullName>EBH_PricingTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[EBH] - to enable/disable Pricing Trigger</description>
    <inlineHelpText>Trigger switch for Pricing Trigger</inlineHelpText>
    <label>Pricing Trigger</label>
    <type>Checkbox</type>
</CustomField>