unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_SellerListTrigger__c.field-meta.xml
<CustomField>
    <fullName>EBH_SellerListTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[EBH] Trigger switch for Seller List Trigger(s)</description>
    <inlineHelpText>Trigger switch for Seller List Trigger(s)</inlineHelpText>
    <label>Seller List Trigger</label>
    <type>Checkbox</type>
</CustomField>