unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_TargetedSellerTrigger__c.field-meta.xml
<CustomField>
    <fullName>EBH_TargetedSellerTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[EBH] Trigger switch for Targeted Seller Trigger(s)</description>
    <inlineHelpText>Trigger switch for Targeted Seller Trigger(s)</inlineHelpText>
    <label>Targeted Seller Trigger</label>
    <type>Checkbox</type>
</CustomField>