unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_TaskTrigger__c.field-meta.xml
<CustomField>
    <fullName>EBH_TaskTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[EBH] (EPH-3780) - To enable/disable Task trigger</description>
    <inlineHelpText>Please check this to enable the Task trigger and disable for stopping the trigger to execute</inlineHelpText>
    <label>Task Trigger</label>
    <type>Checkbox</type>
</CustomField>