unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_TicketTrigger__c.field-meta.xml
<CustomField>
    <fullName>EBH_TicketTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Trigger switch for Ticket Trigger(s)</description>
    <inlineHelpText>Trigger switch for Ticket Trigger(s)</inlineHelpText>
    <label>Ticket Trigger</label>
    <type>Checkbox</type>
</CustomField>