unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/EBH_User__c.field-meta.xml
<CustomField>
    <fullName>EBH_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User trigger</label>
    <type>Checkbox</type>
</CustomField>