unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/Feature_Request_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Feature_Request_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>US-0011982 - Feature request &amp; Project object Technical estimation fields</description>
    <label>Feature Request Trigger</label>
    <type>Checkbox</type>
</CustomField>