unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/Final_value_Fee__c.field-meta.xml
<CustomField>
    <fullName>Final_value_Fee__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Final value Fee</label>
    <type>Checkbox</type>
</CustomField>