unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/GCX_User__c.field-meta.xml
<CustomField>
    <fullName>GCX_User__c</fullName>
    <defaultValue>true</defaultValue>
    <description>US-0009683 (2)Automatic Task Assignment - &quot;Assign Tasks&quot;</description>
    <label>GCX User</label>
    <type>Checkbox</type>
</CustomField>