unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/IntellumUserTrigger__c.field-meta.xml
<CustomField>
    <fullName>IntellumUserTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>US-0010284 - [Intellum] Improve matching for base integration with Intellum</description>
    <label>IntellumUserTrigger</label>
    <type>Checkbox</type>
</CustomField>