unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/Nominated_Item__c.field-meta.xml
<CustomField>
    <fullName>Nominated_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nominated Item</label>
    <type>Checkbox</type>
</CustomField>