unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/OpportunityContactRole__c.field-meta.xml
<CustomField>
    <fullName>OpportunityContactRole__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0010238 - Migrate class &quot;ContactRoleOnOpportunity&quot; into Hive</description>
    <label>OpportunityContactRole</label>
    <type>Checkbox</type>
</CustomField>