unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Product</label>
    <type>Checkbox</type>
</CustomField>