unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/Project_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Project_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Project Trigger</label>
    <type>Checkbox</type>
</CustomField>