unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/Seller_to_Product__c.field-meta.xml
<CustomField>
    <fullName>Seller_to_Product__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Seller to Product</label>
    <type>Checkbox</type>
</CustomField>