unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/Subscription_Request_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Request_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>US-0010561 - [AM] Store Account Manager Subscription Requests in Hive</description>
    <label>Subscription_Request_Trigger</label>
    <type>Checkbox</type>
</CustomField>