unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/UserAvailabilityTrigger__c.field-meta.xml
<CustomField>
    <fullName>UserAvailabilityTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0011996 - Call booking for Ads</description>
    <label>UserAvailabilityTrigger</label>
    <type>Checkbox</type>
</CustomField>