unpackaged/main/default/objects/EBH_ActiveTriggers__c/fields/UserBadgeTrigger__c.field-meta.xml
<CustomField>
    <fullName>UserBadgeTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0009878 - Hive University - Permission Set Assignment Automation for Survey Vista</description>
    <label>UserBadgeTrigger</label>
    <type>Checkbox</type>
</CustomField>